--- a/app/index.html
+++ b/app/index.html
@@ -20,47 +20,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
 </head>
-<body ng-app="redditKeywordAlertApp">
-
-<!-- Navigation bar -->
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">reddit keyword search</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="./">Default</a></li>
-        <li class="active"><a href="./">Static top</a></li>
-        <li><a href="./">Fixed top</a></li>
-      </ul>
-    </div>
-    <!--/.nav-collapse -->
-  </div>
-</div>
+<body ng-app="rka">
 
 <!--[if lt IE 7]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>
@@ -74,13 +34,6 @@
 
 <!-- Add your site or application content here -->
 <div ng-view=""></div>
-
-<!-- Footer information -->
-<footer>
-  <div class="container">
-    <p class="text-muted pull-right">Created by Alex Nakorn</p>
-  </div>
-</footer>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
@@ -125,6 +78,7 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
+<script src="scripts/services/main.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <!-- endbuild -->
 </body>
