--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>Reddit Keyword Alert</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -33,7 +33,7 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<div ng-view=""></div>
+<div ng-include="'views/main.html'"></div>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
@@ -56,19 +56,19 @@
 <script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 
-<!--<script src="bower_components/bootstrap/js/affix.js"></script>
-<script src="bower_components/bootstrap/js/alert.js"></script>
+<script src="bower_components/bootstrap/js/affix.js"></script>
+<!-- <script src="bower_components/bootstrap/js/alert.js"></script>
 <script src="bower_components/bootstrap/js/button.js"></script>
-<script src="bower_components/bootstrap/js/carousel.js"></script>-->
+<script src="bower_components/bootstrap/js/carousel.js"></script>
 <script src="bower_components/bootstrap/js/collapse.js"></script>
-<!--<script src="bower_components/bootstrap/js/dropdown.js"></script>
+<script src="bower_components/bootstrap/js/dropdown.js"></script>
 <script src="bower_components/bootstrap/js/modal.js"></script>
 <script src="bower_components/bootstrap/js/popover.js"></script>
-<script src="bower_components/bootstrap/js/scrollspy.js"></script>
-<script src="bower_components/bootstrap/js/tab.js"></script>
+ --><script src="bower_components/bootstrap/js/scrollspy.js"></script>
+<!-- <script src="bower_components/bootstrap/js/tab.js"></script>
 <script src="bower_components/bootstrap/js/tooltip.js"></script>
-<script src="bower_components/bootstrap/js/transition.js"></script>-->
-
+<script src="bower_components/bootstrap/js/transition.js"></script>
+ -->
 <!-- build:js scripts/modules.js -->
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
