--- a/app/index.html
+++ b/app/index.html
@@ -60,8 +60,8 @@
 <!-- <script src="bower_components/bootstrap/js/alert.js"></script>
 <script src="bower_components/bootstrap/js/button.js"></script>
 <script src="bower_components/bootstrap/js/carousel.js"></script>
-<script src="bower_components/bootstrap/js/collapse.js"></script>
-<script src="bower_components/bootstrap/js/dropdown.js"></script>
+ --><script src="bower_components/bootstrap/js/collapse.js"></script>
+<!-- <script src="bower_components/bootstrap/js/dropdown.js"></script>
 <script src="bower_components/bootstrap/js/modal.js"></script>
 <script src="bower_components/bootstrap/js/popover.js"></script>
  --><script src="bower_components/bootstrap/js/scrollspy.js"></script>
