--- a/app/index.html
+++ b/app/index.html
@@ -56,20 +56,9 @@
 <script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 
-<script src="bower_components/bootstrap/js/affix.js"></script>
-<!-- <script src="bower_components/bootstrap/js/alert.js"></script>
-<script src="bower_components/bootstrap/js/button.js"></script>
-<script src="bower_components/bootstrap/js/carousel.js"></script>
- --><script src="bower_components/bootstrap/js/collapse.js"></script>
-<!-- <script src="bower_components/bootstrap/js/dropdown.js"></script>
-<script src="bower_components/bootstrap/js/modal.js"></script>
-<script src="bower_components/bootstrap/js/popover.js"></script>
- --><script src="bower_components/bootstrap/js/scrollspy.js"></script>
-<!-- <script src="bower_components/bootstrap/js/tab.js"></script>
-<script src="bower_components/bootstrap/js/tooltip.js"></script>
-<script src="bower_components/bootstrap/js/transition.js"></script>
- -->
 <!-- build:js scripts/modules.js -->
+<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -80,6 +69,8 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/services/main.js"></script>
 <script src="scripts/controllers/main.js"></script>
+<script src="scripts/directives/main.js"></script>
+<script src="scripts/filters/main.js"></script>
 <!-- endbuild -->
 </body>
 </html>
